--- a/style.css
+++ b/style.css
@@ -8,6 +8,24 @@
     margin-bottom: 25px;
 }
 
+/* navbar style */
+
+.nav-tabs {
+    padding: 20px;
+    padding-bottom: 0;
+    background: #e23636;
+    color: black;
+    border-bottom: 1px solid #dee2e6;
+}
+
+a {
+    color: inherit;
+}
+
+a:hover {
+    color: white;
+}
+
 /*containter text for making a post*/
 
 .mk-pt-txt-cont {
@@ -28,7 +46,10 @@
 /*input field*/
 
 input {
+    background: #518cca;
+    border: 1px solid black;
     width: 350px;
+    color: white;
 }
 
 /*submit button*/
@@ -42,51 +63,36 @@ input {
     margin: 10px;
 }
 
-/*video container*/
+/*news container*/
 
-.v-ct {
+.nw-ct {
+    margin: 15px;
     border: 1px solid black;
+    background-color: #518cca;
 }
 
-/*video text container*/
+/*box containers in news*/
 
-.v-pt-txt-cont {
-    background-color: black;
-    color: white;
-    padding: 5px;
+.bx {
+    padding: 10px;
+    border: 1px solid #518cca;
+    margin: 5px;
+    background-color: white;
 }
 
-/*video whole container*/
 
-.v-whl-cont {
-    padding: 0 15px;
-    height: 350px;
+/*news image*/
+
+.bx-img {
+    text-align: center;
+    margin: 2px;
+    height: 120px;
+    width: 120px;
 }
 
-/*right content container*/
 
-.v-rght-cont {
-    background-color: #e23636;
-    color: white;
-}
+/*all h1*/
 
-/*left video container*/
-
-.v-lft-cont {
-    background: url("images/infinity-war.jpg")no-repeat center;
-    background-size: cover;
-    color: white;
-}
-
-/*review*/
-
-.v-m-cont {
-    position: absolute;
-    margin: auto;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    height: 85%;
-    width: 75%;
+h1 {
+    font-size: 14pt;
 }
