--- a/style.css
+++ b/style.css
@@ -25,6 +25,12 @@ body {
     border-bottom: 1px solid #dee2e6;
 }
 
+.nav-tabs .nav-item.show .nav-link,
+.nav-tabs .nav-link.active {
+    background-color: transparent !important;
+    color: white;
+}
+
 a {
     color: inherit;
 }
