--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 body {
+
     background-image: url('images/stars.gif');
     background-size: cover;
+
+    /*    background-color: black;*/
 }
 
 /*container for making a post*/
@@ -137,4 +140,10 @@ h1 {
     border-radius: 2px;
     outline: none;
     color: white !important;
+}
+
+#chartdiv {
+    width: 100%;
+    margin: 15px;
+    height: 500px;
 }
